Enhance video processing functions with customizable image extensions and update test notebook for compatibility

--- a/tests/sam3_video_segmentation.ipynb
+++ b/tests/sam3_video_segmentation.ipynb
@@ -31,7 +31,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install \"segment-geospatial[samgeo3]\""
+    "# %pip install \"segment-geospatial[samgeo3]\"\n",
+    "# import sys, samgeo\n",
+    "\n",
+    "# print(\"Python executable:\", sys.executable)\n",
+    "# print(\"samgeo file:\", getattr(samgeo, \"__file__\", None))\n",
+    "# print(\"samgeo version:\", getattr(samgeo, \"__version__\", None))\n",
+    "# print(\"Has SamGeo3Video?\", \"SamGeo3Video\" in dir(samgeo))\n",
+    "\n",
+    "# import sys, importlib\n",
+    "# sys.path.insert(0, \"/segment-geospatial\")  # make sure your repo wins\n",
+    "\n",
+    "# import samgeo\n",
+    "# importlib.reload(samgeo)\n",
+    "\n",
+    "# print(\"samgeo file:\", getattr(samgeo, \"__file__\", None))\n",
+    "# print(\"Names with 'SamGeo3':\", [n for n in dir(samgeo) if \"SamGeo3\" in n])\n",
+    "\n"
    ]
   },
   {
@@ -51,13 +67,16 @@
      "output_type": "stream",
      "text": [
       "To use SamGeo 2, install it as:\n",
-      "\tpip install segment-geospatial[samgeo2]\n"
+      "\tpip install segment-geospatial[samgeo2]\n",
+      ">>> LOADED samgeo FROM /segment-geospatial/samgeo/__init__.py\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "from samgeo import SamGeo3Video, download_file"
+    "import sys, importlib\n",
+    "sys.path.insert(0, \"/segment-geospatial\")  # make sure your repo wins\n",
+    "from samgeo import SamGeo3Video, download_file\n"
    ]
   },
   {
@@ -78,14 +97,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:37,365 742413 sam3_video_predictor.py: 299:\u001b[0m using the following GPU IDs: [0, 1]\n",
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:37,474 742413 sam3_video_predictor.py: 315:\u001b[0m \n",
-      "\n",
-      "\n",
-      "\t*** START loading model on all ranks ***\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:37,474 742413 sam3_video_predictor.py: 317:\u001b[0m loading model on rank=0 with world_size=2 -- this could take a while ...\n"
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:31,879 1146200 sam3_video_predictor.py: 299:\u001b[0m using the following GPU IDs: [0, 1]\n"
      ]
     },
     {
@@ -99,16 +111,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:41,473 742413 sam3_video_base.py: 124:\u001b[0m setting max_num_objects=10000 and num_obj_for_compile=16\n",
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:43,364 742413 sam3_video_predictor.py: 319:\u001b[0m loading model on rank=0 with world_size=2 -- DONE locally\n",
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:43,364 742413 sam3_video_predictor.py: 376:\u001b[0m spawning 1 worker processes\n",
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:44,970 743079 sam3_video_predictor.py: 460:\u001b[0m starting worker process rank=1 with world_size=2\n",
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:45,079 743079 sam3_video_predictor.py: 317:\u001b[0m loading model on rank=1 with world_size=2 -- this could take a while ...\n",
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:48,917 743079 sam3_video_base.py: 124:\u001b[0m setting max_num_objects=10000 and num_obj_for_compile=16\n",
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:50,706 743079 sam3_video_predictor.py: 319:\u001b[0m loading model on rank=1 with world_size=2 -- DONE locally\n",
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:50,706 743079 sam3_video_predictor.py: 469:\u001b[0m started worker rank=1 with world_size=2\n",
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:50,707 742413 sam3_video_predictor.py: 410:\u001b[0m spawned 1 worker processes\n",
-      "\u001b[0m\u001b[32mINFO 2025-12-09 09:47:50,932 742413 sam3_video_predictor.py: 330:\u001b[0m \n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:32,082 1146200 sam3_video_predictor.py: 315:\u001b[0m \n",
+      "\n",
+      "\n",
+      "\t*** START loading model on all ranks ***\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:32,082 1146200 sam3_video_predictor.py: 317:\u001b[0m loading model on rank=0 with world_size=2 -- this could take a while ...\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:32,082 1146200 sam3_video_predictor.py: 317:\u001b[0m loading model on rank=0 with world_size=2 -- this could take a while ...\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:35,963 1146200 sam3_video_base.py: 124:\u001b[0m setting max_num_objects=10000 and num_obj_for_compile=16\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:37,827 1146200 sam3_video_predictor.py: 319:\u001b[0m loading model on rank=0 with world_size=2 -- DONE locally\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:37,827 1146200 sam3_video_predictor.py: 376:\u001b[0m spawning 1 worker processes\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:39,472 1146667 sam3_video_predictor.py: 460:\u001b[0m starting worker process rank=1 with world_size=2\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:39,575 1146667 sam3_video_predictor.py: 317:\u001b[0m loading model on rank=1 with world_size=2 -- this could take a while ...\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:43,405 1146667 sam3_video_base.py: 124:\u001b[0m setting max_num_objects=10000 and num_obj_for_compile=16\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:45,183 1146667 sam3_video_predictor.py: 319:\u001b[0m loading model on rank=1 with world_size=2 -- DONE locally\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:45,183 1146667 sam3_video_predictor.py: 469:\u001b[0m started worker rank=1 with world_size=2\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:45,184 1146200 sam3_video_predictor.py: 410:\u001b[0m spawned 1 worker processes\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:24:45,408 1146200 sam3_video_predictor.py: 330:\u001b[0m \n",
       "\n",
       "\n",
       "\t*** DONE loading model on all ranks ***\n",
@@ -145,24 +165,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "SamGeo3Video.set_video() got an unexpected keyword argument 'image_output_dir'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# sam.set_video(video_path)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43msam\u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_video\u001b[49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m.\u001b[49m\u001b[43mabspath\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m/data/sam3/sources/IMG_4346.MOV\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_rate\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimage_output_dir\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m./output/images\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: SamGeo3Video.set_video() got an unexpected keyword argument 'image_output_dir'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting frames to: /segment-geospatial/tests/output/image\n",
+      "Video FPS: 30\n",
+      "Total Frames: 3403\n",
+      "Saving every 10 frame(s)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "frame loading (image folder) [rank=1]:   0%|          | 0/341 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished saving 341 images to /segment-geospatial/tests/output/image\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "frame loading (image folder) [rank=1]: 100%|██████████| 341/341 [00:30<00:00, 11.14it/s]\n",
+      "frame loading (image folder) [rank=0]: 100%|██████████| 341/341 [00:30<00:00, 11.12it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 341 frames. Session started.\n"
      ]
     }
    ],
    "source": [
     "# sam.set_video(video_path)\n",
-    "sam.set_video(os.path.abspath(\"/data/sam3/sources/IMG_4346.MOV\"), frame_rate=6)"
+    "sam.set_video(os.path.abspath(\"/data/sam3/sources/IMG_4346.MOV\"), frame_rate=3, image_output_dir=\"./output/image\", image_ext=\".png\")\n",
+    "# sam.set_video(\"./output/images\")  # test setting from image directory"
    ]
   },
   {
@@ -185,9 +234,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Session reset.\n",
+      "[Gloo] Rank 1 is connected to 1 peer ranks. Expected number of connected peer ranks is : 1\n",
+      "[Gloo] Rank 0 is connected to 1 peer ranks. Expected number of connected peer ranks is : 1\n",
+      "Found 1 object(s) matching 'circular connector' on frame 0.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aabce87c4f184c708c28af1b76b6cc40",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "propagate_in_video:   0%|          | 0/341 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a4bc682920c431ab07b9dca864fc16d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "propagate_in_video: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Propagated masks to 341 frames.\n"
+     ]
+    }
+   ],
    "source": [
     "# Segment all car in the video\n",
     "sam.generate_masks(\"circular connector\")"
@@ -211,13 +306,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![](https://github.com/user-attachments/assets/563dcda7-24e2-43f5-95b1-5706f72a3cc0)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -225,13 +313,6 @@
    "source": [
     "# Show multiple frames in a grid\n",
     "sam.show_frames(frame_stride=50, ncols=3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![](https://github.com/user-attachments/assets/cc08c90b-3227-4bcd-acfa-2cb3e6c89bc5)"
    ]
   },
   {
@@ -253,13 +334,6 @@
     "sam.remove_object(2)\n",
     "sam.propagate()\n",
     "sam.show_frame(0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![](https://github.com/user-attachments/assets/d4d98bf1-4580-466d-a7dc-19485fbeb466)"
    ]
   },
   {
@@ -292,13 +366,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://github.com/user-attachments/assets/dc1f1b64-654a-4c57-a892-2679e02ffe29)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Refine with Multiple Points\n",
     "\n",
     "Use positive and negative points to refine the mask.\n"
@@ -325,13 +392,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://github.com/user-attachments/assets/48b454d8-ba9c-43df-b001-fba6f86792b1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Save Results\n",
     "\n",
     "Save masks as images or create an output video.\n"
@@ -339,14 +399,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving masks... Prefix: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving masks: 100%|██████████| 341/341 [00:11<00:00, 30.43it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 341 mask files to output/mask\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "os.makedirs(\"output\", exist_ok=True)\n",
     "\n",
     "# Save mask images\n",
-    "sam.save_masks(\"output/masks\")"
+    "sam.save_masks(\"output/mask\",binary=True,prefix=\"\")"
    ]
   },
   {
@@ -370,9 +459,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:34:03,490 1146667 sam3_video_predictor.py: 250:\u001b[0m removed session 0649bb01-d3a7-4395-a753-ce6d74010e9e; live sessions: [], GPU memory: 5094 MiB used and 8568 MiB reserved (max over time: 8108 MiB used and 8568 MiB reserved)\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:34:03,544 1146200 sam3_video_predictor.py: 250:\u001b[0m removed session 0649bb01-d3a7-4395-a753-ce6d74010e9e; live sessions: [], GPU memory: 5118 MiB used and 12478 MiB reserved (max over time: 11461 MiB used and 12478 MiB reserved)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Session closed.\n"
+     ]
+    }
+   ],
    "source": [
     "sam.close()"
    ]
@@ -386,9 +491,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:34:05,799 1146200 sam3_video_predictor.py: 512:\u001b[0m shutting down 1 worker processes\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:34:05,800 1146667 sam3_video_predictor.py: 484:\u001b[0m worker rank=1 shutting down\n",
+      "\u001b[0m\u001b[32mINFO 2025-12-09 15:34:06,076 1146200 sam3_video_predictor.py: 518:\u001b[0m shut down 1 worker processes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictor shutdown complete.\n"
+     ]
+    }
+   ],
    "source": [
     "sam.shutdown()"
    ]
